// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box box-border="..." /> DEPRECATED props props box-border-lr 1`] = `
<div
  className="ek-box ek-box_border-lr_TEMPLATE_NAME"
/>
`;

exports[`<Box box-border="..." /> DEPRECATED props props box-border-tb 1`] = `
<div
  className="ek-box ek-box_border-tb_TEMPLATE_NAME"
/>
`;

exports[`<Box box-border="..." /> props box-border 1`] = `
<div
  className="ek-box ek-box_border_TEMPLATE_NAME"
/>
`;

exports[`<Box box-border="..." /> props box-border-bottom 1`] = `
<div
  className="ek-box ek-box_border-bottom_TEMPLATE_NAME"
/>
`;

exports[`<Box box-border="..." /> props box-border-left 1`] = `
<div
  className="ek-box ek-box_border-left_TEMPLATE_NAME"
/>
`;

exports[`<Box box-border="..." /> props box-border-right 1`] = `
<div
  className="ek-box ek-box_border-right_TEMPLATE_NAME"
/>
`;

exports[`<Box box-border="..." /> props box-border-top 1`] = `
<div
  className="ek-box ek-box_border-top_TEMPLATE_NAME"
/>
`;
